--- a/info.html
+++ b/info.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <title>WONDERTECH</title>
 </head>
 <body>
