--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="responsive.css">
     <title>WONDERTECH</title>
 </head>
 <body>
